--- a/ACEMP 2017/paper latex/isie2012_template.tex
+++ b/ACEMP 2017/paper latex/isie2012_template.tex
@@ -35,6 +35,7 @@
 \usepackage[font=footnotesize]{subfig}
 \usepackage{fixltx2e}
 
+\usepackage{mathtools}
 
 %\usepackage{stfloats}
 % stfloats.sty was written by Sigitas Tolusis. This package gives LaTeX2e
@@ -118,41 +119,15 @@ Subsection text here.
 Subsubsection text here.
 
 
-% An example of a floating figure using the graphicx package.
-% Note that \label must occur AFTER (or within) \caption.
-% For figures, \caption should occur after the \includegraphics.
-% Note that IEEEtran v1.7 and later has special internal code that
-% is designed to preserve the operation of \label within \caption
-% even when the captionsoff option is in effect. However, because
-% of issues like this, it may be the safest practice to put all your
-% \label just after \caption rather than within \caption{}.
-%
-% Reminder: the "draftcls" or "draftclsnofoot", not "draft", class
-% option should be used if it is desired that the figures are to be
-% displayed while in draft mode.
-%
+
 %\begin{figure}[!t]
 %\centering
-%\includegraphics[width=2.5in]{myfigure}
-% where an .eps filename suffix will be assumed under latex, 
-% and a .pdf suffix will be assumed for pdflatex; or what has been declared
-% via \DeclareGraphicsExtensions.
-%\caption{Simulation Results}
-%\label{fig_sim}
+%\includegraphics[width=8cm]{images/conv_motor_drive}
+%\caption{A conventional motor drive block diagram}
+%\label{fig:conv_motor_drive}
 %\end{figure}
 
-% Note that IEEE typically puts floats only at the top, even when this
-% results in a large percentage of a column being occupied by floats.
 
-
-% An example of a double column floating figure using two subfigures.
-% (The subfig.sty package must be loaded for this to work.)
-% The subfigure \label commands are set within each subfloat command, the
-% \label for the overall figure must come after \caption.
-% \hfil must be used as a separator to get equal spacing.
-% The subfigure.sty package works much the same way, except \subfigure is
-% used instead of \subfloat.
-%
 %\begin{figure*}[!t]
 %\centerline{\subfloat[Case I]\includegraphics[width=2.5in]{subfigcase1}%
 %\label{fig_first_case}}
@@ -162,51 +137,33 @@ Subsubsection text here.
 %\caption{Simulation results}
 %\label{fig_sim}
 %\end{figure*}
-%
-% Note that often IEEE papers with subfigures do not employ subfigure
-% captions (using the optional argument to \subfloat), but instead will
-% reference/describe all of them (a), (b), etc., within the main caption.
 
 
-% An example of a floating table. Note that, for IEEE style tables, the 
-% \caption command should come BEFORE the table. Table text will default to
-% \footnotesize as IEEE normally uses this smaller font for tables.
-% The \label must come after \caption as always.
-%
-%\begin{table}[!t]
-%% increase table row spacing, adjust to taste
-%\renewcommand{\arraystretch}{1.3}
-% if using array.sty, it might be a good idea to tweak the value of
-% \extrarowheight as needed to properly center the text within the cells
-%\caption{An Example of a Table}
-%\label{table_example}
-%\centering
-%% Some packages, such as MDW tools, offer better commands for making tables
-%% than the plain LaTeX2e tabular which is used here.
-%\begin{tabular}{|c||c|}
-%\hline
-%One & Two\\
-%\hline
-%Three & Four\\
-%\hline
-%\end{tabular}
-%\end{table}
+% The following is an example of commenting a large section
+\iffalse
+\begin{table}[htp]
+\renewcommand{\arraystretch}{1.3}
+\caption{An Example of a Table}
+\label{table_example}
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+One & Two & a\\
+\hline
+Three & Four & a\\
+\hline
+Three & Four & b\\
+\hline
+\end{tabular}
+\end{table}
+\fi
 
+Most studies consider only one side for DC link characterisation or filter component optimization, although they should be considered simultaneously. This research aims at modeling the system as a whole, investigating the effect of harmonic components injected to the DC link from both sides and eliminating the low frequency harmonic due to the rectifier side by using the modular structure of the inverter side.
 
-% Note that IEEE does not put floats in the very first column - or typically
-% anywhere on the first page for that matter. Also, in-text middle ("here")
-% positioning is not used. Most IEEE journals/conferences use top floats
-% exclusively. Note that, LaTeX2e, unlike IEEE journals/conferences, places
-% footnotes above bottom floats. This can be corrected via the \fnbelowfloat
-% command of the stfloats package.
+\section{Problem definition}
+%analytical Rectifier model, 6th harmonic component %injection, LC filter characteristics
 
-
-
-\section{Analytical model of the rectifier}
-Rectifier model, 6th harmonic component injection, LC filter characteristics
-
-
-A conventional motor drive application block diagram is shown in Fig. \ref{fig:conv_motor_drive}. The DC link decouples the inverter and rectifier such that, its characteristics is effected from both sides. Most studies consider only one side for DC link characterisation or filter component optimization, although they should be considered simultaneously. This research aims at modeling the system as a whole, investigating the effect of harmonic components injected to the DC link from both sides and eliminating the low frequency harmonic due to the rectifier side by using the modular structure of the inverter side.
+A conventional motor drive application block diagram is shown in Fig. \ref{fig:conv_motor_drive}. The rectifier and inverter are connected via the DC link, therefore a harmonic component injected from one side is reflected to the other side. For systems having two active converters on both sides such as back-to-back converters, the only fluctuations seen on the DC link voltage are high frequency components which are directly related to the switching frequency. On the other hand, in case of passive converters such as diode bridge rectifiers, low frequency components are emerge on the DC link voltage which are related to the grid supply frequency.
 
 \begin{figure}[htp]
   \centering
@@ -214,9 +171,6 @@ A conventional motor drive application block diagram is shown in Fig. \ref{fig:c
   \caption{A conventional motor drive block diagram}
   \label{fig:conv_motor_drive}
 \end{figure}
-
-Diode bridge rectifier is a natural-commutated converter, circuit schematic of which is shown in Fig. \ref{fig:rect_circuit}.
-
 \begin{figure}[htp]
   \centering
   \includegraphics[width=8cm]{images/rect_circuit}
@@ -224,12 +178,33 @@ Diode bridge rectifier is a natural-commutated converter, circuit schematic of w
   \label{fig:rect_circuit}
 \end{figure}
 
-A set of voltage and current waveforms are also shown in Fig. \ref{fig:rect_waveform}, for 400V line-to-line grid voltage at 50 Hz, filter inductance of 1 mH, filter capacitance of 3 mF and load resistance of 
-10 $\Omega$. The three-phase rectifier output voltage and current has large harmonic components frequency of which is six times the grid frequency. This component is filtered by a second order LC filter resulting in a much smoother load voltage and current. Since the harmonic frequency is relatively low in comparison with conventional switching frequencies, large inductance and capacitance values are needed on the DC link filter. Those passive elements constitute a large portion of overall volume and cost, hence it is aimed to minimize their values.
+Diode bridge rectifier is a natural-commutated converter, circuit schematic of which is shown in Fig. \ref{fig:rect_circuit}. The supply voltages are shown in \ref{eq:1}-\ref{eq:3}, where $V_m$ is the RMS value of the supply voltage and $f_s$ is the supply frequency.
+\begin{equation} \label{eq:1}
+v_{sa}(t) = \sqrt{2}V_msin(2\pi f_s t)
+\end{equation}
+\begin{equation} \label{eq:2}
+v_{sb}(t) = \sqrt{2}V_msin(2\pi f_s t-2\pi/3)
+\end{equation}
+\begin{equation} \label{eq:3}
+v_{sc}(t) = \sqrt{2}V_msin(2\pi f_s t-4\pi/3)
+\end{equation}
+ 
+With this configuration, integer multiples of sixth harmonic component are present on the rectifier output voltage in addition to the DC component as shown in \ref{eq:4}. 
+
+\begin{equation} \label{eq:4}
+v_{dc}(t) = \frac{3\sqrt{3}}{\pi} \bigg[1-\sum_{k=1}^{\infty} \frac{2}{36k^2-1}cos(6k\omega_{0}t)\bigg] 
+%\sqrt{2}V_msin(2\pi f_s t)
+\end{equation}
+
+The purpose of the LC filter at the output is to decrease these harmonic components on the load side. The LC filter is bulky and costly.
+
+Size of passives are very important for IMMD applications.
+
+A set of voltage and current waveforms are  shown in Fig. \ref{fig:rect_waveform}, for 400V line-to-line grid voltage at 50 Hz, filter inductance of 1 mH, filter capacitance of 3 mF and load resistance of 10 $\Omega$. The three-phase rectifier output voltage and current has large harmonic components frequency of which is six times the grid frequency. This component is filtered by a second order LC filter resulting in a much smoother load voltage and current. Since the harmonic frequency is relatively low in comparison with conventional switching frequencies, large inductance and capacitance values are needed on the DC link filter. Those passive elements constitute a large portion of overall volume and cost, hence it is aimed to minimize their values.
 
 \begin{figure}[htp]
   \centering
-  \includegraphics[width=8cm]{images/rect_waveform}
+  \includegraphics[width=10cm]{images/rect_waveform}
   \caption{Diode bridge rectifier input and output waveforms}
   \label{fig:rect_waveform}
 \end{figure}
@@ -239,57 +214,142 @@ A set of voltage and current waveforms are also shown in Fig. \ref{fig:rect_wave
  Proposed method: Sixth harmonic creation on the DC link with third harmonic injection (analytical)
 
 
+Voltages and current expressions of one inverter module with zero sequence third harmonic injection are shown in \ref{eq:1}-\ref{eq:6}.
+
+\begin{equation} \label{eq:1}
+v_a(t) = V_1sin(2\pi ft-\phi_{1v})+V_3sin(6\pi ft-\phi_{3v})
+\end{equation}
+\begin{equation} \label{eq:2}
+v_b(t) = V_1sin(2\pi ft-2\pi/3-\phi_{1v})+V_3sin(6\pi ft-\phi_{3v})
+\end{equation}
+\begin{equation} \label{eq:3}
+v_c(t) = V_1sin(2\pi ft-4\pi/3-\phi_{1v})+V_3sin(6\pi ft-\phi_{3v})
+\end{equation}
+
+\begin{equation} \label{eq:4}
+i_a(t) = I_1sin(2\pi ft-\phi_{1i})+I_3sin(6\pi ft-\phi_{3i})
+\end{equation}
+\begin{equation} \label{eq:5}
+i_b(t) = I_1sin(2\pi ft-2\pi/3-\phi_{1i})+I_3sin(6\pi ft-\phi_{3i})
+\end{equation}
+\begin{equation} \label{eq:6}
+i_c(t) = I_1sin(2\pi ft-4\pi/3-\phi_{1i})+I_3sin(6\pi ft-\phi_{3i})
+\end{equation}
+
+Let us make the definitions shown in \ref{eq:7}-\ref{eq:14}.
+
+\begin{equation} \label{eq:7}
+\phi_{11p} = \phi_{1v}+\phi_{1i}
+\end{equation}
+\begin{equation} \label{eq:8}
+\phi_{33p} = \phi_{3v}+\phi_{3i}
+\end{equation}
+\begin{equation} \label{eq:9}
+\phi_{13p} = \phi_{1v}+\phi_{3i}
+\end{equation}
+\begin{equation} \label{eq:10}
+\phi_{31p} = \phi_{3v}+\phi_{1i}
+\end{equation}
+\begin{equation} \label{eq:11}
+\phi_{11n} = \phi_{1v}-\phi_{1i}
+\end{equation}
+\begin{equation} \label{eq:12}
+\phi_{33n} = \phi_{3v}-\phi_{3i}
+\end{equation}
+\begin{equation} \label{eq:13}
+\phi_{13n} = \phi_{1v}-\phi_{3i}
+\end{equation}
+\begin{equation} \label{eq:14}
+\phi_{31n} = \phi_{3v}-\phi_{1i}
+\end{equation}
+
+The instantaneous power expression for each phase are shown in \ref{eq:15}-\ref{eq:17}.
+
+\begin{equation}
+\label{eq:15}
+\begin{multlined}
+p_a(t) = 
+\frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n})-cos(4\pi ft-\phi_{11p}) \bigg \rbrack
+\\
++
+\frac{V_1I_3}{2} \bigg \lbrack cos(4\pi ft+\phi_{13n})-cos(8\pi ft-\phi_{13p}) \bigg \rbrack
+\\
++
+\frac{V_3I_1}{2} \bigg \lbrack cos(4\pi ft-\phi_{31n})-cos(8\pi ft-\phi_{31p}) \bigg \rbrack
+\\
++
+\frac{V_3I_3}{2} \bigg \lbrack cos(\phi_{33n})-cos(12\pi ft-\phi_{33p}) \bigg \rbrack,
+\end{multlined}
+\end{equation}
+
+\begin{equation}
+\label{eq:16}
+\begin{multlined}
+p_b(t) = 
+\frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n})-cos(4\pi ft-4\pi/3-\phi_{11p}) \bigg \rbrack
+\\
++
+\frac{V_1I_3}{2} \bigg \lbrack cos(4\pi ft+ 2\pi/3+\phi_{13n})-cos(8\pi ft-2\pi/3-\phi_{13p}) \bigg \rbrack
+\\
++
+\frac{V_3I_1}{2} \bigg \lbrack cos(4\pi ft+2\pi/3-\phi_{31n})-cos(8\pi ft-2\pi/3-\phi_{31p}) \bigg \rbrack
+\\
++
+\frac{V_3I_3}{2} \bigg \lbrack cos(\phi_{33n})-cos(12\pi ft-\phi_{33p}) \bigg \rbrack,
+\end{multlined}
+\end{equation}
+
+\begin{equation}
+\label{eq:17}
+\begin{multlined}
+p_c(t) = 
+\frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n})-cos(4\pi ft-8\pi/3-\phi_{11p}) \bigg \rbrack
+\\
++
+\frac{V_1I_3}{2} \bigg \lbrack cos(4\pi ft+ 4\pi/3+\phi_{13n})-cos(8\pi ft-4\pi/3-\phi_{13p}) \bigg \rbrack
+\\
++
+\frac{V_3I_1}{2} \bigg \lbrack cos(4\pi ft+4\pi/3-\phi_{31n})-cos(8\pi ft-4\pi/3-\phi_{31p}) \bigg \rbrack
+\\
++
+\frac{V_3I_3}{2} \bigg \lbrack cos(\phi_{33n})-cos(12\pi ft-\phi_{33p}) \bigg \rbrack,
+\end{multlined}
+\end{equation}
+
+The total instantaneous power becomes as in \ref{eq:18}. As seen, all the frequency components which are two times and four times the fundamental frequency are cancelled, leaving two DC components and a component at six times the fundamental frequency.
+
+\begin{equation}
+\label{eq:18}
+\begin{multlined}
+p_{total}(t) = 
+\frac{V_1I_1}{2} \bigg \lbrack cos(\phi_{11n}) \bigg \rbrack
++
+\frac{V_3I_3}{2} \bigg \lbrack cos(\phi_{33n}) \bigg \rbrack
+\\
++
+\frac{V_3I_3}{2} \bigg \lbrack cos(12\pi ft-\phi_{33p}) \bigg \rbrack
+\end{multlined}
+\end{equation}
+
+
 
 \section{Implementation of the method and practical issues}
 New IMMD scheme for third harmonic injection, practical considerations, effects on other components, torque ripple, copper loss etc.
 
-
-
 \section{Results}
 Simulation results
-
 
 \section{Conclusion}
 The conclusion goes here.
 
 
-
-
-% conference papers do not normally have an appendix
-
-
 % use section* for acknowledgement
 \section*{Acknowledgment}
-
 
 The authors would like to thank...
 
 
 
-
-
-% trigger a \newpage just before the given reference
-% number - used to balance the columns on the last page
-% adjust value as needed - may need to be readjusted if
-% the document is modified later
-%\IEEEtriggeratref{8}
-% The "triggered" command can be changed if desired:
-%\IEEEtriggercmd{\enlargethispage{-5in}}
-
-% references section
-
-% can use a bibliography generated by BibTeX as a .bbl file
-% BibTeX documentation can be easily obtained at:
-% http://www.ctan.org/tex-archive/biblio/bibtex/contrib/doc/
-% The IEEEtran BibTeX style support page is at:
-% http://www.michaelshell.org/tex/ieeetran/bibtex/
-%\bibliographystyle{IEEEtran}
-% argument is your BibTeX string definitions and bibliography database(s)
-%\bibliography{IEEEabrv,../bib/paper}
-%
-% <OR> manually copy in the resultant .bbl file
-% set second argument of \begin to the number of references
-% (used to reserve space for the reference number labels box)
 \begin{thebibliography}{1}
 
 \bibitem{IEEEhowto:kopka}
@@ -299,9 +359,6 @@ H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
 \end{thebibliography}
 
 
-
-
-% that's all folks
 \end{document}
 
 
